export type Permission = {
  name: string
  description: string
}
